# consciousness-operating-system

./: .gitignore  MVP_REQUIREMENTS.md  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/v1/: auth.py  consciousness.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  consciousness.py  user.py
frontend/: DASHBOARD_IMPLEMENTATION.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/sacred/: ConsciousnessVisualization.tsx  SacredCard.tsx  SacredMandala.tsx
frontend/src/store/: consciousnessStore.ts
frontend/src/types/: consciousness.ts
src/: index.ts  test-setup.ts
src/api/: express-server.ts
src/core/: consciousness-engine.test.ts  consciousness-engine.ts  user-profile-service.test.ts  user-profile-service.ts
src/types/: consciousness.test.ts  consciousness.ts  partial-updates.ts
